
  - It is an error to call query.get() when the
    given entity is not a single, full class 
    entity or mapper (i.e. a column).  This is
    a deprecation warning in 0.6.8.  
    [ticket:2144]

- sql
  - Some improvements to error handling inside
    of the execute procedure to ensure auto-close
    connections are really closed when very 
    unusual DBAPI errors occur.

  - Added explicit check for when Column .name
    is assigned as blank string [ticket:2140]

  - Fixed bug whereby if FetchedValue was passed
    to column server_onupdate, it would not
    have its parent "column" assigned, added
    test coverage for all column default assignment
    patterns.  [ticket:2147]  also in 0.6.8

- postgresql
  - Fixed the psycopg2_version parsing in the 
    psycopg2 dialect.

0.7.0b4
=======
- general
  - Changes to the format of CHANGES, this file.
    The format changes have been applied to 
    the 0.7 releases.

    - The "-declarative" changes will now be listed
      directly under the "-orm" section, as these
      are closely related.

    - The 0.5 series changes have been moved to
      the file CHANGES_PRE_06 which replaces
      CHANGES_PRE_05.

    - The changelog for 0.6.7 and subsequent within
      the 0.6 series is now listed only in the 
      CHANGES file within the 0.6 branch.  
      In the 0.7 CHANGES file (i.e. this file), all the
      0.6 changes are listed inline within the 0.7
      section in which they were also applied 
      (since all 0.6 changes are in 0.7 as well).
      Changes that apply to an 0.6 version here
      are noted as are if any differences in 
      implementation/behavior are present.

- orm
  - Some fixes to "evaulate" and "fetch" evaluation
    when query.update(), query.delete() are called.
    The retrieval of records is done after autoflush
    in all cases, and before update/delete is 
    emitted, guarding against unflushed data present
    as well as expired objects failing during 